Package_Tools/include-C/vips/h/image.h

#define VIPS_IMAGE_H
typedef enum {
	VIPS_FORMAT_NOTSET = -1,
	VIPS_FORMAT_UCHAR = 0,
	VIPS_FORMAT_CHAR = 1,
	VIPS_FORMAT_USHORT = 2,
	VIPS_FORMAT_SHORT = 3,
	VIPS_FORMAT_UINT = 4,
	VIPS_FORMAT_INT = 5,
	VIPS_FORMAT_FLOAT = 6,
	VIPS_FORMAT_COMPLEX = 7,
	VIPS_FORMAT_DOUBLE = 8,
	VIPS_FORMAT_DPCOMPLEX = 9,
	VIPS_FORMAT_LAST = 10
} VipsBandFormat;
typedef enum {
	VIPS_CODING_ERROR = -1,
	VIPS_CODING_NONE = 0,
	VIPS_CODING_LABQ = 2,
	VIPS_CODING_RAD = 6,
	VIPS_CODING_LAST = 7
} VipsCoding;
typedef enum {
	VIPS_ACCESS_RANDOM,
	VIPS_ACCESS_SEQUENTIAL,
	VIPS_ACCESS_SEQUENTIAL_UNBUFFERED,
	VIPS_ACCESS_LAST
} VipsAccess;
/* Struct we keep a record of execution time in. Passed to eval signal so
 * it can assess progress.
 */
typedef struct _VipsProgress {
	/*< private >*/
	VipsImage *im; /* Image we are part of */

	/*< public >*/
	int run;	   /* Time we have been running */
	int eta;	   /* Estimated seconds of computation left */
	gint64 tpels;  /* Number of pels we expect to calculate */
	gint64 npels;  /* Number of pels calculated so far */
	int percent;   /* Percent complete */
	GTimer *start; /* Start time */
} VipsProgress;
#define VIPS_TYPE_IMAGE (vips_image_get_type())
#define VIPS_IMAGE(obj) \
	(G_TYPE_CHECK_INSTANCE_CAST((obj), \
		VIPS_TYPE_IMAGE, VipsImage))
#define VIPS_IMAGE_CLASS(klass) \
	(G_TYPE_CHECK_CLASS_CAST((klass), \
		VIPS_TYPE_IMAGE, VipsImageClass))
#define VIPS_IS_IMAGE(obj) \
	(G_TYPE_CHECK_INSTANCE_TYPE((obj), VIPS_TYPE_IMAGE))
#define VIPS_IS_IMAGE_CLASS(klass) \
	(G_TYPE_CHECK_CLASS_TYPE((klass), VIPS_TYPE_IMAGE))
#define VIPS_IMAGE_GET_CLASS(obj) \
	(G_TYPE_INSTANCE_GET_CLASS((obj), \
		VIPS_TYPE_IMAGE, VipsImageClass))
typedef struct _VipsImageClass {
	VipsObjectClass parent_class;

	/* Signals we emit.
	 */

	/* Evaluation is starting.
	 */
	void (*preeval)(VipsImage *image, VipsProgress *progress, void *data);

	/* Evaluation progress.
	 */
	void (*eval)(VipsImage *image, VipsProgress *progress, void *data);

	/* Evaluation is ending.
	 */
	void (*posteval)(VipsImage *image, VipsProgress *progress, void *data);

	/* An image has been written to.
	 * Used by eg. vips_image_new_mode("x.jpg", "w") to do the
	 * final write to jpeg.
	 * Set *result to non-zero to indicate an error on write.
	 */
	void (*written)(VipsImage *image, int *result, void *data);

	/* An image has been modified in some way and all caches
	 * need dropping.
	 */
	void (*invalidate)(VipsImage *image, void *data);

	/* Minimise this pipeline.
	 *
	 * This is triggered (sometimes) at the end of eval to signal that
	 * we're probably done and that operations involved should try to
	 * minimise memory use by, for example, dropping caches.
	 *
	 * See vips_tilecache().
	 */
	void (*minimise)(VipsImage *image, void *data);

} VipsImageClass;
/* Don't put spaces around void here, it breaks gtk-doc.
 */
extern
GType vips_image_get_type(void);
/* Has to be guint64 and not size_t/off_t since we have to be able to address
 * huge images on platforms with 32-bit files.
 */

/* Pixel address calculation macros.
 */
extern
void vips_progress_set(gboolean progress);
extern
void vips_image_invalidate_all(VipsImage *image);
extern
void vips_image_minimise_all(VipsImage *image);
extern
gboolean vips_image_is_sequential(VipsImage *image);
extern
void vips_image_set_progress(VipsImage *image, gboolean progress);
extern
gboolean vips_image_iskilled(VipsImage *image);
extern
void vips_image_set_kill(VipsImage *image, gboolean kill);
extern
char *vips_filename_get_filename(const char *vips_filename);
extern
char *vips_filename_get_options(const char *vips_filename);
extern
VipsImage *vips_image_new(void);
extern
VipsImage *vips_image_new_memory(void);
extern
VipsImage *vips_image_memory(void);
extern
VipsImage *vips_image_new_from_file(const char *name, ...)
	;
extern
VipsImage *vips_image_new_from_file_RW(const char *filename);
extern
VipsImage *vips_image_new_from_file_raw(const char *filename,
	int xsize, int ysize, int bands, guint64 offset);
extern
VipsImage *vips_image_new_from_memory(const void *data, size_t size,
	int width, int height, int bands, VipsBandFormat format);
extern
VipsImage *vips_image_new_from_memory_copy(const void *data, size_t size,
	int width, int height, int bands, VipsBandFormat format);
extern
VipsImage *vips_image_new_from_buffer(const void *buf, size_t len,
	const char *option_string, ...)
	;
extern
VipsImage *vips_image_new_from_source(VipsSource *source,
	const char *option_string, ...) ;
extern
VipsImage *vips_image_new_matrix(int width, int height);
extern
VipsImage *vips_image_new_matrixv(int width, int height, ...);
extern
VipsImage *vips_image_new_matrix_from_array(int width, int height,
	const double *array, int size);
extern
VipsImage *vips_image_matrix_from_array(int width, int height,
	const double *array, int size);
extern
VipsImage *vips_image_new_from_image(VipsImage *image,
	const double *c, int n);
extern
VipsImage *vips_image_new_from_image1(VipsImage *image, double c);
extern
void vips_image_set_delete_on_close(VipsImage *image,
	gboolean delete_on_close);
extern
guint64 vips_get_disc_threshold(void);
extern
VipsImage *vips_image_new_temp_file(const char *format);
extern
int vips_image_write(VipsImage *image, VipsImage *out);
extern
int vips_image_write_to_file(VipsImage *image, const char *name, ...)
	;
extern
int vips_image_write_to_buffer(VipsImage *in,
	const char *suffix, void **buf, size_t *size, ...)
	;
extern
int vips_image_write_to_target(VipsImage *in,
	const char *suffix, VipsTarget *target, ...)
	;
extern
void *vips_image_write_to_memory(VipsImage *in, size_t *size);
extern
int vips_image_decode_predict(VipsImage *in,
	int *bands, VipsBandFormat *format);
extern
int vips_image_decode(VipsImage *in, VipsImage **out);
extern
int vips_image_encode(VipsImage *in, VipsImage **out, VipsCoding coding);
extern
gboolean vips_image_isMSBfirst(VipsImage *image);
extern
gboolean vips_image_isfile(VipsImage *image);
extern
gboolean vips_image_ispartial(VipsImage *image);
extern
gboolean vips_image_hasalpha(VipsImage *image);
extern
VipsImage *vips_image_copy_memory(VipsImage *image);
extern
int vips_image_wio_input(VipsImage *image);
extern
int vips_image_pio_input(VipsImage *image);
extern
int vips_image_pio_output(VipsImage *image);
extern
int vips_image_inplace(VipsImage *image);
extern
int vips_image_write_prepare(VipsImage *image);
extern
int vips_image_write_line(VipsImage *image, int ypos, VipsPel *linebuffer);
extern
gboolean vips_band_format_isint(VipsBandFormat format);
extern
gboolean vips_band_format_isuint(VipsBandFormat format);
extern
gboolean vips_band_format_is8bit(VipsBandFormat format);
extern
gboolean vips_band_format_isfloat(VipsBandFormat format);
extern
gboolean vips_band_format_iscomplex(VipsBandFormat format);
extern
int vips_system(const char *cmd_format, ...)
	;
/* Defined in type.c but declared here, since they use VipsImage.
 */
extern
VipsArrayImage *vips_array_image_new(VipsImage **array, int n);
extern
VipsArrayImage *vips_array_image_newv(int n, ...);
extern
VipsArrayImage *vips_array_image_new_from_string(const char *string,
	VipsAccess flags);
extern
VipsArrayImage *vips_array_image_empty(void);
extern
VipsArrayImage *vips_array_image_append(VipsArrayImage *array,
	VipsImage *image);
extern
VipsImage **vips_array_image_get(VipsArrayImage *array, int *n);
extern
VipsImage **vips_value_get_array_image(const GValue *value, int *n);
extern
void vips_value_set_array_image(GValue *value, int n);
/* Defined in reorder.c, but really a function on image.
 */
extern
int vips_reorder_prepare_many(VipsImage *image,
	VipsRegion **regions, VipsRect *r);
extern
void vips_reorder_margin_hint(VipsImage *image, int margin);
extern
void vips_image_free_buffer(VipsImage *image, void *buffer);