Package_Tools/include-C/vips/pp/image.pp


function vips_image_get_type:TGType;cdecl;external;
{ Has to be guint64 and not size_t/off_t since we have to be able to address
 * huge images on platforms with 32-bit files.
  }
{ Pixel address calculation macros.
  }
procedure vips_progress_set(progress:Tgboolean);cdecl;external;
procedure vips_image_invalidate_all(image:PVipsImage);cdecl;external;
procedure vips_image_minimise_all(image:PVipsImage);cdecl;external;
function vips_image_is_sequential(image:PVipsImage):Tgboolean;cdecl;external;
procedure vips_image_set_progress(image:PVipsImage; progress:Tgboolean);cdecl;external;
function vips_image_iskilled(image:PVipsImage):Tgboolean;cdecl;external;
procedure vips_image_set_kill(image:PVipsImage; kill:Tgboolean);cdecl;external;
(* Const before type ignored *)
function vips_filename_get_filename(vips_filename:Pchar):Pchar;cdecl;external;
(* Const before type ignored *)
function vips_filename_get_options(vips_filename:Pchar):Pchar;cdecl;external;
function vips_image_new:PVipsImage;cdecl;external;
function vips_image_new_memory:PVipsImage;cdecl;external;
function vips_image_memory:PVipsImage;cdecl;external;
(* Const before type ignored *)
function vips_image_new_from_file(name:Pchar; args:array of const):PVipsImage;cdecl;external;
function vips_image_new_from_file(name:Pchar):PVipsImage;cdecl;external;
(* Const before type ignored *)
function vips_image_new_from_file_RW(filename:Pchar):PVipsImage;cdecl;external;
(* Const before type ignored *)
function vips_image_new_from_file_raw(filename:Pchar; xsize:longint; ysize:longint; bands:longint; offset:Tguint64):PVipsImage;cdecl;external;
(* Const before type ignored *)
function vips_image_new_from_memory(data:pointer; size:Tsize_t; width:longint; height:longint; bands:longint; 
           format:TVipsBandFormat):PVipsImage;cdecl;external;
(* Const before type ignored *)
function vips_image_new_from_memory_copy(data:pointer; size:Tsize_t; width:longint; height:longint; bands:longint; 
           format:TVipsBandFormat):PVipsImage;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function vips_image_new_from_buffer(buf:pointer; len:Tsize_t; option_string:Pchar; args:array of const):PVipsImage;cdecl;external;
function vips_image_new_from_buffer(buf:pointer; len:Tsize_t; option_string:Pchar):PVipsImage;cdecl;external;
(* Const before type ignored *)
function vips_image_new_from_source(source:PVipsSource; option_string:Pchar; args:array of const):PVipsImage;cdecl;external;
function vips_image_new_from_source(source:PVipsSource; option_string:Pchar):PVipsImage;cdecl;external;
function vips_image_new_matrix(width:longint; height:longint):PVipsImage;cdecl;external;
function vips_image_new_matrixv(width:longint; height:longint; args:array of const):PVipsImage;cdecl;external;
function vips_image_new_matrixv(width:longint; height:longint):PVipsImage;cdecl;external;
(* Const before type ignored *)
function vips_image_new_matrix_from_array(width:longint; height:longint; array:Pdouble; size:longint):PVipsImage;cdecl;external;
(* Const before type ignored *)
function vips_image_matrix_from_array(width:longint; height:longint; array:Pdouble; size:longint):PVipsImage;cdecl;external;
(* Const before type ignored *)
function vips_image_new_from_image(image:PVipsImage; c:Pdouble; n:longint):PVipsImage;cdecl;external;
function vips_image_new_from_image1(image:PVipsImage; c:Tdouble):PVipsImage;cdecl;external;
procedure vips_image_set_delete_on_close(image:PVipsImage; delete_on_close:Tgboolean);cdecl;external;
function vips_get_disc_threshold:Tguint64;cdecl;external;
(* Const before type ignored *)
function vips_image_new_temp_file(format:Pchar):PVipsImage;cdecl;external;
function vips_image_write(image:PVipsImage; out:PVipsImage):longint;cdecl;external;
(* Const before type ignored *)
function vips_image_write_to_file(image:PVipsImage; name:Pchar; args:array of const):longint;cdecl;external;
function vips_image_write_to_file(image:PVipsImage; name:Pchar):longint;cdecl;external;
(* Const before type ignored *)
function vips_image_write_to_buffer(in:PVipsImage; suffix:Pchar; buf:Ppointer; size:Psize_t; args:array of const):longint;cdecl;external;
function vips_image_write_to_buffer(in:PVipsImage; suffix:Pchar; buf:Ppointer; size:Psize_t):longint;cdecl;external;
(* Const before type ignored *)
function vips_image_write_to_target(in:PVipsImage; suffix:Pchar; target:PVipsTarget; args:array of const):longint;cdecl;external;
function vips_image_write_to_target(in:PVipsImage; suffix:Pchar; target:PVipsTarget):longint;cdecl;external;
function vips_image_write_to_memory(in:PVipsImage; size:Psize_t):pointer;cdecl;external;
function vips_image_decode_predict(in:PVipsImage; bands:Plongint; format:PVipsBandFormat):longint;cdecl;external;
function vips_image_decode(in:PVipsImage; out:PPVipsImage):longint;cdecl;external;
function vips_image_encode(in:PVipsImage; out:PPVipsImage; coding:TVipsCoding):longint;cdecl;external;
function vips_image_isMSBfirst(image:PVipsImage):Tgboolean;cdecl;external;
function vips_image_isfile(image:PVipsImage):Tgboolean;cdecl;external;
function vips_image_ispartial(image:PVipsImage):Tgboolean;cdecl;external;
function vips_image_hasalpha(image:PVipsImage):Tgboolean;cdecl;external;
function vips_image_copy_memory(image:PVipsImage):PVipsImage;cdecl;external;
function vips_image_wio_input(image:PVipsImage):longint;cdecl;external;
function vips_image_pio_input(image:PVipsImage):longint;cdecl;external;
function vips_image_pio_output(image:PVipsImage):longint;cdecl;external;
function vips_image_inplace(image:PVipsImage):longint;cdecl;external;
function vips_image_write_prepare(image:PVipsImage):longint;cdecl;external;
function vips_image_write_line(image:PVipsImage; ypos:longint; linebuffer:PVipsPel):longint;cdecl;external;
function vips_band_format_isint(format:TVipsBandFormat):Tgboolean;cdecl;external;
function vips_band_format_isuint(format:TVipsBandFormat):Tgboolean;cdecl;external;
function vips_band_format_is8bit(format:TVipsBandFormat):Tgboolean;cdecl;external;
function vips_band_format_isfloat(format:TVipsBandFormat):Tgboolean;cdecl;external;
function vips_band_format_iscomplex(format:TVipsBandFormat):Tgboolean;cdecl;external;
(* Const before type ignored *)
function vips_system(cmd_format:Pchar; args:array of const):longint;cdecl;external;
function vips_system(cmd_format:Pchar):longint;cdecl;external;
{ Defined in type.c but declared here, since they use VipsImage.
  }
function vips_array_image_new(array:PPVipsImage; n:longint):PVipsArrayImage;cdecl;external;
function vips_array_image_newv(n:longint; args:array of const):PVipsArrayImage;cdecl;external;
function vips_array_image_newv(n:longint):PVipsArrayImage;cdecl;external;
(* Const before type ignored *)
function vips_array_image_new_from_string(_string:Pchar; flags:TVipsAccess):PVipsArrayImage;cdecl;external;
function vips_array_image_empty:PVipsArrayImage;cdecl;external;
function vips_array_image_append(array:PVipsArrayImage; image:PVipsImage):PVipsArrayImage;cdecl;external;
function vips_array_image_get(array:PVipsArrayImage; n:Plongint):^PVipsImage;cdecl;external;
(* Const before type ignored *)
function vips_value_get_array_image(value:PGValue; n:Plongint):^PVipsImage;cdecl;external;
procedure vips_value_set_array_image(value:PGValue; n:longint);cdecl;external;
{ Defined in reorder.c, but really a function on image.
  }
function vips_reorder_prepare_many(image:PVipsImage; regions:PPVipsRegion; r:PVipsRect):longint;cdecl;external;
procedure vips_reorder_margin_hint(image:PVipsImage; margin:longint);cdecl;external;
procedure vips_image_free_buffer(image:PVipsImage; buffer:pointer);cdecl;external;
{ C++ end of extern C conditionnal removed }
{__cplusplus }
{$endif}
{VIPS_IMAGE_H }

implementation

{ was #define dname def_expr }
function VIPS_TYPE_IMAGE : longint; { return type might be wrong }
  begin
    VIPS_TYPE_IMAGE:=vips_image_get_type;
  end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function VIPS_IMAGE(obj : longint) : longint;
begin
  VIPS_IMAGE:=G_TYPE_CHECK_INSTANCE_CAST(obj,VIPS_TYPE_IMAGE,VipsImage);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function VIPS_IMAGE_CLASS(klass : longint) : longint;
begin
  VIPS_IMAGE_CLASS:=G_TYPE_CHECK_CLASS_CAST(klass,VIPS_TYPE_IMAGE,VipsImageClass);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function VIPS_IS_IMAGE(obj : longint) : longint;
begin
  VIPS_IS_IMAGE:=G_TYPE_CHECK_INSTANCE_TYPE(obj,VIPS_TYPE_IMAGE);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function VIPS_IS_IMAGE_CLASS(klass : longint) : longint;
begin
  VIPS_IS_IMAGE_CLASS:=G_TYPE_CHECK_CLASS_TYPE(klass,VIPS_TYPE_IMAGE);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function VIPS_IMAGE_GET_CLASS(obj : longint) : longint;
begin
  VIPS_IMAGE_GET_CLASS:=G_TYPE_INSTANCE_GET_CLASS(obj,VIPS_TYPE_IMAGE,VipsImageClass);
end;


end.
